--- a/index.html
+++ b/index.html
@@ -33,12 +33,8 @@
     </section>
     <section id="fund">
         <h2 class="section-title">모집중인 펀드</h2>
-        <div class="top-fund-list">
-            <div class="fund">1</div>
-            <div class="fund">2</div>
-            <div class="fund">3</div>
-            <div class="fund">4</div>
-        </div>
+        <div class="top-fund-list"></div>
     </section>
 </body>
+
 </html>
