--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <header>
                 <div class="logo">
-                    <h1>Fund Manager</h1>
+                    <h1 class="eng">Fund Manager</h1>
                 </div>
                 <nav>
                     <ul>
@@ -26,7 +26,7 @@
                 </nav>
             </header>
             <div id="main">
-                <h1>Fund Manager</h1>
+                <h1 class="eng">Fund Manager</h1>
                 <p>당신의 소중한 자산을 지켜드립니다.</p>
             </div>
         </div>
@@ -35,6 +35,25 @@
         <h2 class="section-title">모집중인 펀드</h2>
         <div class="top-fund-list"></div>
     </section>
+    <section id="party">
+        <div class="filter">
+            <h2 class="section-title">펀드 모집하기</h2>
+            <div class="panel">
+                <h3>당신의 펀드를 만들고 투자자를 모아보세요</h3>
+                <p class="eng">펀드 수집과 목표 설정을 통해 펀드를 만들 수 있습니다.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Totam ab quae commodi cum at nemo, atque voluptate deleniti
+                    omnis placeat! Eveniet laborum eum dolorem dolor! In omnis facilis fuga quas.
+                </p>
+                <button class="btn">펀드모집</button>
+            </div>
+        </div>
+    </section>
+
+    <div id="popup">
+        <div class="outer"></div>
+        <div class="inner"></div>
+    </div>
 </body>
 
 </html>
